@@ -1,5 +1,13 @@
 2005-11-15  Vincent Noel <vincent.noel@gmail.com>
 
+	* calendar.c: (calendar_init_data):
+	* calendar.h:
+	* logview.c: (logview_calendar_set_state),
+	(logview_window_get_property), (logview_window_class_init): Use
+	GObject properties.
+
+2005-11-15  Vincent Noel <vincent.noel@gmail.com>
+
 	* misc.c (locale_to_utf8): Better logic.
 	* userprefs.c (prefs_store_window_size): Remove a few FIXMEs.
 
